@@ -7,6 +7,8 @@ copyright_year   = 2014
 [@Basic]
 [NextRelease]
 [VersionFromModule]
-[AutoPrereqs]
+[Prereqs]
+Test::Builder = 0
+
 [TestRelease]
 [ConfirmRelease]
